cluster/apps/cloud/private-website/private-website-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: private-website
  namespace: cloud
  labels:
    app.kubernetes.io/name: private-website
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: private-website
  template:
    metadata:
      labels:
        app.kubernetes.io/name: private-website
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                - private-website
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: private-website
        image: ${SECRET_CLUSTER_OWNER_USERNAME}/private-website:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          # Run the container as nobody:nogroup
          runAsUser: 65534
          runAsGroup: 65534
          capabilities:
            drop:
            - NET_RAW
        resources:
          requests:
            cpu: 50m
            memory: 10Mi
          limits:
            cpu: 250m
            memory: 30Mi
        # This is a workaround due to readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp
      volumes:
      - emptyDir: {}
        name: tmp
